@@ -454,7 +454,7 @@ Collection.prototype.distinct = function distinct(key, query, callback) {
     , key: key
   };
 
-  var cmd = DbCommand.createDbCommand(this.db, mapCommandHash);
+  var cmd = DbCommand.createDbSlaveOkCommand(this.db, mapCommandHash);
   
   this.db._executeQueryCommand(cmd, {read:true}, function (err, result) {
     if (err) {
@@ -587,7 +587,7 @@ Collection.prototype.findAndModify = function findAndModify (query, sort, doc, o
   // Commands to send
   var commands = [];
   // Add the find and modify command
-  commands.push(DbCommand.createDbCommand(this.db, queryObject, options));
+  commands.push(DbCommand.createDbSlaveOkCommand(this.db, queryObject, options));
   // If we have safe defined we need to return both call results
   var chainedCommands = errorOptions != null ? true : false;
   // Add error command if we have one
@@ -1039,7 +1039,7 @@ Collection.prototype.mapReduce = function mapReduce (map, reduce, options, callb
   }
 
   var self = this;
-  var cmd = DbCommand.createDbCommand(this.db, mapCommandHash);
+  var cmd = DbCommand.createDbSlaveOkCommand(this.db, mapCommandHash);
 
   this.db._executeQueryCommand(cmd, {read:true}, function (err, result) {
     if (err) {
@@ -1157,6 +1157,7 @@ Collection.prototype.group = function group(keys, condition, initial, reduce, fi
         , '$reduce': reduceFunction
         , 'cond': condition
         , 'initial': initial
+        , 'out': "inline"
       }      
     };
     
@@ -1175,10 +1176,10 @@ Collection.prototype.group = function group(keys, condition, initial, reduce, fi
       selector.group.key = hash;
     }
 
-    var cmd = DbCommand.createDbCommand(this.db, selector);
+    var cmd = DbCommand.createDbSlaveOkCommand(this.db, selector);
     
     this.db._executeQueryCommand(cmd, {read:true}, function (err, result) {
-      if (err) return callback(err);
+      if(err != null) return callback(err);
       
       var document = result.documents[0];
       if (null == document.retval) {
