@@ -847,7 +847,7 @@ Db.prototype.previousErrors = function(options, callback) {
  */
 Db.prototype.executeDbCommand = function(command_hash, options, callback) {
   if(callback == null) { callback = options; options = {}; }  
-  this._executeQueryCommand(DbCommand.createDbCommand(this, command_hash, options), options, callback);
+  this._executeQueryCommand(DbCommand.createDbSlaveOkCommand(this, command_hash, options), options, callback);
 };
 
 /**
@@ -973,7 +973,7 @@ Db.prototype.ensureIndex = function(collectionName, fieldOrSpec, options, callba
  * @api public
  */
 Db.prototype.cursorInfo = function(callback) {
-  this._executeQueryCommand(DbCommand.createDbCommand(this, {'cursorInfo':1}), function(err, result) {
+  this._executeQueryCommand(DbCommand.createDbSlaveOkCommand(this, {'cursorInfo':1}), function(err, result) {
     callback(err, result.documents[0]);
   });
 };
